Move sshdport from the nodes table to the port_reservation table.
I haven't removed the sshdport column from the nodes table yet, in
case I need to go back quickly.

--- a/tbsetup/assign_wrapper.in
+++ b/tbsetup/assign_wrapper.in
@@ -2465,8 +2465,9 @@ foreach my $vnode (keys(%v2pmap)) {
 
 	printdb("sshdport: $vnode $pnode $vvnode $sshdport\n");
 
-	DBQueryFatal("update nodes set sshdport=$sshdport ".
-		     "where node_id='$vvnode'");
+	DBQueryFatal("replace into port_registration set pid='$pid', " .
+                     "eid='$eid', exptidx='$experiment_idx', service='sshd', ".
+                     "node_id='$vvnode', port=$sshdport");
     }
 }
 
