--- a/db/Experiment.pm.in
+++ b/db/Experiment.pm.in
@@ -25,6 +25,7 @@ use English;
 use Data::Dumper;
 use File::Basename;
 use overload ('""' => 'Stringify');
+use libtblog_simple;
 
 use vars qw($EXPT_PRELOAD $EXPT_START $EXPT_SWAPIN
 	    $EXPT_SWAPOUT $EXPT_SWAPMOD
