Implemt FS#187 -- Show admin history of projects:
  When a project is initially created a new mailing list is created,
  PROJ-admin@emulab.net.

  testbed-approval is subscribed to the list

  Several emails that originally went to testbed-approval now go to the
  mailing list instead.  The From, To, fields are basically the same
  with testbed-approval becoming PROJ-admin.  This means some mail
  is sent with a From PROJ-admin and Bcc the mailing list.  Note that
  some mail still goes to testbed-approval directly, in particular
  ones where there is no clear project involved, and when a project is
  denied.

  In addition notifications of approval status of new members is also
  sent to the list.  These emails use to only go to testbed-audit@.

  Currently All mail sent to PROJ-admin is also sent to testbed-audit
  (via a Bcc).  This means that some mail that didn't use to go to
  testbed-audit now does.

  The mailing list is deleted when a project is deleted with out first
  being approved.  Becuase of this notified that a project is denied
  is sent to testbed-approval instead of PROJ-admin.

  Admins can access the mailing list from the Project Profile page.

  The mailing list is open in order to allow users to reply to the
  mailing list, in addition the check that PROJ-admin is in the To or
  CC field is disabled.  There is currently no spam control on the
  mailing lists.  However, since the mailing list address is not posted
  anywhere it should't pick up to much spam.  If it does we can deal
  with it then.

  Finally, a new script is created to create the per-project admin
  mailing list.  See doc/UPDATING.

Also add DBQuerySingleFatal to libdb, which is like DBQueryFatal but
also fails if the query didn't return any results.  Basically
identical to he version in libtblog.  Eventually libtblog should be
modified to use this version.

--- a/collab/mailman/GNUmakefile.in
+++ b/collab/mailman/GNUmakefile.in
@@ -13,7 +13,7 @@ include $(OBJDIR)/Makeconf
 
 SBIN_SCRIPTS		= addmmlist delmmlist setmmlistmembers mmsetup \
 			  setmmpasswd mmlistmembership mmmodifymember \
-			  addmmuser delmmuser
+			  addmmuser delmmuser addprojadminlist
 LIBEXEC_SCRIPTS		= webaddmmlist webdelmmlist websetmmpasswd mmxlogin \
 			  webmmlistmembership
 CTRL_LIBEXEC_SCRIPTS	= genaliases
@@ -24,7 +24,7 @@ CTRL_SBIN_SCRIPTS	= mailmanproxy
 SETUID_BIN_SCRIPTS   = 
 SETUID_SBIN_SCRIPTS  = addmmuser delmmuser addmmlist delmmlist \
 			setmmlistmembers setmmpasswd mmlistmembership \
-			mmmodifymember
+			mmmodifymember addprojadminlist
 SETUID_LIBX_SCRIPTS  = mmxlogin
 
 #
@@ -63,6 +63,8 @@ post-install:
 	chmod u+s $(INSTALL_LIBEXECDIR)/mmxlogin
 	chown root $(INSTALL_SBINDIR)/mmmodifymember
 	chmod u+s $(INSTALL_SBINDIR)/mmmodifymember
+	chown root $(INSTALL_SBINDIR)/mmmodifymember
+	chmod u+s $(INSTALL_SBINDIR)/addprojadminlist
 
 #
 # Control node installation (okay, plastic)
