--- a/tbsetup/libtestbed.pm.in
+++ b/tbsetup/libtestbed.pm.in
@@ -19,7 +19,11 @@ use Exporter;
 	 TBSCRIPTLOCK_OKAY TBSCRIPTLOCK_TIMEDOUT
 	 TBSCRIPTLOCK_IGNORE TBSCRIPTLOCK_FAILED
 	 PROJROOT GROUPROOT USERROOT SCRATCHROOT SHAREROOT
-	 TBValidUserDir TBValidUserDirList TBMakeTempFile NewUUID System);
+	 TBValidUserDir TBValidUserDirList TBMakeTempFile NewUUID System
+	 SendProjAdminMail);
+@EXPORT_OK =
+    qw ( TBMAIL_PROJADMIN);
+
 
 # After package decl.
 use English;
@@ -80,6 +84,12 @@ sub TB_AUDITEMAIL() { $TBAUDITEMAIL; }
 sub TBMAIL_OPS()    { "Testbed Ops <$TBOPSEMAIL>"; }
 sub TBMAIL_WWW()    { "Testbed WWW <$TBWWWEMAIL>"; }
 sub TBMAIL_AUDIT()  { "Testbed Audit <$TBAUDITEMAIL>" }
+
+# TBMAIL_PROJADMIN should, in general, not be used directly, use
+# SendProjAdminMail
+sub TBMAIL_PROJADMIN($) {
+    @MAILMANSUPPORT@ ? "$_[0]-admin\@@OURDOMAIN@" : "@TBAPPROVALEMAIL@";
+}
 
 # This is for the swigged event library which includes this file.
 sub TB_BOSSEVENTPORT()  { "@BOSSEVENTPORT@"; }
@@ -201,6 +211,41 @@ sub OPENMAIL($$;$$)
     print MAIL "\n";
 
     return(*MAIL);
+}
+
+#
+# Send Admin related mail for a project
+#
+# SendProjAdminMail(Proj, From, To, Subject, Message, [More Headers]);
+# One of From or To is expected to be "ADMIN", the other is expected to
+# be a real email address or "AUDIT"....
+# 
+# the project admin mailing list.
+
+sub SendProjAdminMail($$$$$;$)
+{
+    my ($proj, $from, $to, $subject, $message, $headers) = @_;
+    my $projadminmail = TBMAIL_PROJADMIN($proj);
+    $headers .= "\n" if defined $headers;
+    if ($from eq 'ADMIN') {
+	$from = $projadminmail;
+	$headers .= "Bcc: $projadminmail\n"; 
+   } elsif ($to eq 'ADMIN') {
+	$to = $projadminmail;
+	$headers .= "Reply-To: $projadminmail\n";
+    } else {
+	$headers .= "Bcc: $projadminmail\n";
+    }
+    if ($from eq 'AUDIT') {
+	$from = TB_AUDITEMAIL;
+	$headers .= "Bcc: " . TB_AUDITEMAIL . "\n";
+    } elsif ($to eq "AUDIT") {
+	$to = TB_AUDITEMAIL;
+    } else {
+	$headers .= "Bcc: " . TB_AUDITEMAIL . "\n";
+    }
+    chop $headers;
+    SENDMAIL($to, $subject, $message, $from, $headers);
 }
 
 #
